logs/frontier_detector/build.make.023.log
[  2%] Built target frontier_detector_gencfg
[  2%] Built target visualization_msgs_generate_messages_nodejs
[  2%] Built target std_msgs_generate_messages_nodejs
[  2%] Built target geometry_msgs_generate_messages_nodejs
[  2%] Built target std_msgs_generate_messages_py
[  2%] Built target geometry_msgs_generate_messages_py
[  2%] Built target orb_slam2_ros_generate_messages_py
[  7%] Built target frontier_detector_area
[  7%] Built target orb_slam2_ros_generate_messages_eus
[  7%] Built target orb_slam2_ros_gencfg
[  7%] Built target octomap_msgs_generate_messages_py
[  7%] Built target orb_slam2_ros_generate_messages_nodejs
[  7%] Built target octomap_msgs_generate_messages_nodejs
[  7%] Built target dynamic_reconfigure_gencfg
[  7%] Built target octomap_msgs_generate_messages_cpp
[  7%] Built target octomap_msgs_generate_messages_eus
[  7%] Built target octomap_msgs_generate_messages_lisp
[  7%] Built target _frontier_detector_generate_messages_check_deps_PointArray
[  7%] Built target dynamic_reconfigure_generate_messages_cpp
[  7%] Built target visualization_msgs_generate_messages_py
[  7%] Built target geometry_msgs_generate_messages_eus
[  7%] Built target _frontier_detector_generate_messages_check_deps_iou
[  7%] Built target tf_generate_messages_nodejs
[  7%] Built target tf2_msgs_generate_messages_cpp
[  7%] Built target actionlib_generate_messages_cpp
[  7%] Built target rosgraph_msgs_generate_messages_nodejs
[  7%] Built target std_msgs_generate_messages_cpp
[  7%] Built target actionlib_msgs_generate_messages_py
[  7%] Built target dynamic_reconfigure_generate_messages_lisp
[  7%] Built target std_msgs_generate_messages_eus
[  7%] Built target roscpp_generate_messages_lisp
[  7%] Built target rosgraph_msgs_generate_messages_lisp
[  7%] Built target actionlib_generate_messages_lisp
[  7%] Built target dynamic_reconfigure_generate_messages_py
[  7%] Built target std_msgs_generate_messages_lisp
[  7%] Built target orb_slam2_ros_generate_messages_cpp
[  7%] Built target tf_generate_messages_eus
[  7%] Built target actionlib_msgs_generate_messages_eus
[  7%] Built target orb_slam2_ros_generate_messages_lisp
[  7%] Built target roscpp_generate_messages_py
[  7%] Built target rosgraph_msgs_generate_messages_py
[  7%] Built target dynamic_reconfigure_generate_messages_eus
[  7%] Built target roscpp_generate_messages_cpp
[  7%] Built target roscpp_generate_messages_eus
[  7%] Built target visualization_msgs_generate_messages_lisp
[  7%] Built target geometry_msgs_generate_messages_lisp
[  7%] Built target geometry_msgs_generate_messages_cpp
[  7%] Built target tf2_msgs_generate_messages_py
[  7%] Built target dynamic_reconfigure_generate_messages_nodejs
[  7%] Built target tf_generate_messages_cpp
[  7%] Built target rosgraph_msgs_generate_messages_eus
[  7%] Built target roscpp_generate_messages_nodejs
[  7%] Built target tf2_msgs_generate_messages_eus
[  7%] Built target tf_generate_messages_lisp
[  7%] Built target nav_msgs_generate_messages_py
[  7%] Built target visualization_msgs_generate_messages_eus
[  7%] Built target nav_msgs_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_py
[  7%] Built target actionlib_generate_messages_eus
[  7%] Built target nav_msgs_generate_messages_nodejs
[  7%] Built target sensor_msgs_generate_messages_nodejs
[  7%] Built target sensor_msgs_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_eus
[  7%] Built target rosgraph_msgs_generate_messages_cpp
[  7%] Built target actionlib_msgs_generate_messages_cpp
[  7%] Built target sensor_msgs_generate_messages_lisp
[  7%] Built target actionlib_generate_messages_nodejs
[  7%] Built target visualization_msgs_generate_messages_cpp
[  7%] Built target actionlib_msgs_generate_messages_lisp
[  7%] Built target nav_msgs_generate_messages_eus
[  7%] Built target tf_generate_messages_py
[  7%] Built target actionlib_generate_messages_py
[  7%] Built target actionlib_msgs_generate_messages_nodejs
[  7%] Built target tf2_msgs_generate_messages_lisp
[  7%] Built target nav_msgs_generate_messages_lisp
[  7%] Built target tf2_msgs_generate_messages_nodejs
[35m[1mScanning dependencies of target frontier_detector_iou[0m
[ 15%] Built target frontier_detector_generate_messages_py
[ 25%] Built target frontier_detector_global_rrt_iou
[ 35%] [32mBuilding CXX object CMakeFiles/frontier_detector_iou.dir/src/compute_iou.cpp.o[0m
[ 38%] Built target frontier_detector_generate_messages_nodejs
[ 38%] Built target frontier_detector_generate_messages_cpp
[ 43%] Built target frontier_detector_mapMerger
[ 53%] Built target frontier_detector_global_rrt
[ 64%] Built target frontier_detector_local_rrt
[ 71%] Built target frontier_detector_generate_messages_eus
[ 82%] Built target frontier_detector_local_rrt_iou
[ 87%] Built target frontier_detector_generate_messages_lisp
[ 87%] Built target frontier_detector_generate_messages
[ 92%] Built target frontier_detector_octomapper
[ 97%] Built target frontier_detector_gridmapper
/home/usr/data/ExplOrbSLAM_working/src/src/frontier_detector/src/compute_iou.cpp: In constructor ‘FrontierDetector::FrontierDetector()’:
/home/usr/data/ExplOrbSLAM_working/src/src/frontier_detector/src/compute_iou.cpp:32:9: error: ‘sub3_’ was not declared in this scope; did you mean ‘sub1_’?
   32 |         sub3_ = nh.subscribe<OccupancyGrid>(topic2, 10, &FrontierDetector::mapCallback3, this);
      |         ^~~~~
      |         sub1_
/home/usr/data/ExplOrbSLAM_working/src/src/frontier_detector/src/compute_iou.cpp:32:76: error: ‘mapCallback3’ is not a member of ‘FrontierDetector’
   32 |         sub3_ = nh.subscribe<OccupancyGrid>(topic2, 10, &FrontierDetector::mapCallback3, this);
      |                                                                            ^~~~~~~~~~~~
make[2]: *** [CMakeFiles/frontier_detector_iou.dir/build.make:63: CMakeFiles/frontier_detector_iou.dir/src/compute_iou.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:2658: CMakeFiles/frontier_detector_iou.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
